--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.18.1",
+    "morgan": "^1.8.2",
+    "node-adodb": "^3.1.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
